[package]
name = "barrage"
description = "A simple async broadcast channel"
version = "0.1.0"
authors = ["Restioson <restiosondev@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/Restioson/barrage"
documentation = "https://docs.rs/barrage"
readme = "README.md"
keywords = ["async", "futures", "async-await", "mpmc", "channel", "broadcast"]
categories = ["asynchronous", "concurrency"]

[dependencies]
concurrent-queue = { git = "https://github.com/Restioson/concurrent-queue", branch = "loom" }
#event-listener = { git = "https://github.com/Restioson/event-listener", branch = "loom" }
event-listener = { path = "../event-listener" }

[target.'cfg(not(windows))'.dependencies]
spinny = "0.2"

[target.'cfg(loom)'.dependencies]
loom = { git = "https://github.com/Restioson/loom", features = ["futures", "checkpoint"] }

[patch.crates-io]
loom = { git = "https://github.com/Restioson/loom" }

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded", "time", "blocking"] }
tokio-test = { version = "0.2" }
