[package]
name = "barrage"
description = "A simple async broadcast channel"
version = "0.1.0"
authors = ["Restioson <restiosondev@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/Restioson/barrage"
documentation = "https://docs.rs/barrage"
readme = "README.md"
keywords = ["async", "futures", "mpmc", "channel", "broadcast"]
categories = ["asynchronous", "concurrency"]

[dependencies]
concurrent-queue = "1.2.2"
event-listener = "2.4.0"

[target.'cfg(not(windows))'.dependencies]
spinny = "0.2"

[target.'cfg(loom)'.dependencies]
loom = { version = "0.3.5", features = ["futures"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded", "time", "blocking"] }
tokio-test = { version = "0.2" }
waker-fn = "1"
